--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 
 body
 {
-	background-color:#ADDD00;
+	background-color:#ADADAD;
 	overflow:visible;
 }
 
@@ -14,38 +14,62 @@ img
 
 footer
 {
-	margin-top:25em;
-	margin-left:15em;
 	text-align:center;
-	font-size:.7em;
+	font-size:9px;
 	font-family:Arial, "Times New Roman";
 }
 
 .title
 {
-	font-size: 36px;
+	font-size: 52px;
+    margin-top:0px;
+    text-align:center;
+    color:#ADADAD
+    
+}
+
+#top
+{
+    position:fixed; 
+    top:0;
+    left:0;
+    right:0;
+    margin:0;
+    height:75px;
+    width:100%;
+    background-color:#000000;
+    z-index:1
 }
 
 #title_border
 {
 	background:#FFF;
-	height:5em;
-	width:30em;
+	height:50px;
+	width:90px;
 	border-style:solid;
 	border-color:#000;
 	border:thin;
 	position:absolute;
-	top:2.3em;
-	left:18em;
+	top:25px;
 	z-index:1;
 }
 
 #main_flow
 {
 	position:absolute;
-	top:10em;
-	left:20em;
-	right:20em;
+	top:150px;
+	left:100px;
+    width:800px;
+    z-index:0;
+}
+
+#bottom
+{
+    position:absolute;
+    bottom:5px;
+    /*width:100%;*/
+    height:5px;
+    width:100%
 }
 
 /*#Nick_Colby_Ethan_J488
@@ -54,20 +78,32 @@ footer
 	top:5em;
 }*/
 
-.primary
+.primary_div
 {
-	font-size: 2em;
-	font-family: monospace;
-	color:#C00;
-	text-align:left;
-        margin-top:1em;
-	margin-left:-3em;
-	margin-bottom: .5em;
+    position:relative;
+    left:-20px;
 }
 
-.secondary
+.secondary_div
+{
+    position:relative;
+    left:10px;
+}
+
+.primary_text
+{
+	font-size: 36px;
+	font-family: Arial;
+	color:#C00;
+	text-align:left;
+    margin-top: 5px;
+	margin-left: 5px;
+	margin-bottom:5px;
+}
+
+.secondary_text
 {
 	font-family:Arial;
-	font-size:1em;
+	font-size:12px;
 	text-align:justify;
 }
